//
// Copyright 2018, TeamDev. All rights reserved.
//
// Redistribution and use in source and/or binary forms, with or without
// modification, must retain the above copyright notice and the following
// disclaimer.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
//

syntax = "proto3";

package spine.examples.blog;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.examples.blog";
option java_package = "io.spine.examples.blog.commands";
option java_outer_classname = "CommandsProto";
option java_multiple_files = true;
option java_generate_equals_and_hash = true;

import "blog/identifiers.proto";

// Creates a `Blog`.
//
message CreateBlog {

    // A `Blog` ID.
    //
    BlogId blog_id = 1;

    // A title/name.
    //
    string name = 2 [(required) = true];
}

// Creates a `BlogPost` in a "draft" state. The `BlogPost` belongs to a specific `Blog`.
//
message CreateBlogPost {

    // A `BlogPost` ID containing `Blog` ID inside.
    //
    BlogPostId blog_post_id = 1;

    // A title/name.
    //
    string title = 2 [(required) = true];

    // A body with content.
    //
    string body = 3;
}

// Publishes a `BlogPost` on a certain `Blog` and makes it visible externally. Initially, it is created as a "draft" and
// not visible for everybody.
//
message PublishBlogPost {

    // A `BlogPost` ID to publish.
    //
    BlogPostId blog_post_id = 1;
}
